--- a/cube.html
+++ b/cube.html
@@ -1,3 +1,17 @@
-<div id="info">触摸屏幕以旋转模型<br>双指捏合可缩放</div>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>3D 模型交互</title>
+    <link rel="stylesheet" href="cube.css">
+</head>
+<body>
+    <div id="info">触摸屏幕以旋转模型<br>双指捏合可缩放</div>
+    <div id="canvas-container"></div>
 
-<div id="canvas-container"></div>
+    <!-- 引入 Three.js 和 OrbitControls -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>  <!-- [2][5][7] -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="cube.js"></script>
+</body>
+</html>
